# COMPAS-II-FS2021

./: .gitignore  LICENSE  README.md  environment.yml  setup.cfg
.github/: pull_request_template.md
docker/irb910sc-planner/abb_irb910sc_support/: CMakeLists.txt  package.xml
docker/irb910sc-planner/abb_irb910sc_support/config/: joint_names_irb910sc_3_065.yaml
docker/irb910sc-planner/abb_irb910sc_support/meshes/irb910sc_3_065/collision/: base.stl  link1.stl  link2.stl
docker/irb910sc-planner/abb_irb910sc_support/meshes/irb910sc_3_065/visual/: base.stl  link2.stl  link3.stl  link4.stl
docker/irb910sc-planner/abb_irb910sc_support/urdf/: irb910sc_3_065.urdf
exercises/: README.md
lecture_01/: 01_primitives.py  02_primitives_operations.py  03_primitives_constructors.py  04_primitives_equivalence.py  05_primitives_transforms.py  06_shapes.py  07_shapes_rhino.py  10_mesh_rhino.py  11_mesh_blender.py  12_mesh_ghpython.py  13_mesh_from_scratch.py  14_mesh_plotter.py  15_mesh_info_vertex_degree.py  16_mesh_info_vertices_on_boundary.py  17_mesh_info_face_neighbors.py  18_mesh_info_vertex_neighbors.py  19_mesh_info_edge_strip.py  20_mesh_info_edge_loop.py  21_mesh_vertex_normals_rhino.py  22_mesh_flip_cycles_rhino.py  23_mesh_rhino.py  24_mesh_booleans.py  25_mesh_booleans_rhino.py  30_network_from_scratch.py  30_network_interactive.py  31_network_from_scratch_rhino.py  32_network_from_scratch_rhino.py  32_network_plotter.py  33_network_info_node_neighbors.py  34_network_info_shortest_path.py  35_network_interactive.py  36_network_serialization.py  39_network_koch.py  (+4 more)
(+291 files in other folders)
